Limitando promotores a 2000 pares de base

--- a/Mineração dos promotores de Vigna.ipynb
+++ b/Mineração dos promotores de Vigna.ipynb
@@ -362,6 +362,7 @@
     }
    ],
    "source": [
+    "#Coleta todos os IDs do loci de vigna\n",
     "df = pd.read_csv(\n",
     "    'Loci de Vigna.txt',\n",
     "    sep=',', header=None, names=['id'])\n",
@@ -374,6 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Coleta 2000 pares de base do promotor para cada gene do genoma de vigna\n",
     "from intermine.webservice import Service\n",
     "service = Service(\"https://phytozome.jgi.doe.gov/phytomine/service\")\n",
     "\n",
@@ -396,37 +398,7 @@
     "        promotores.write(str(row[\"primaryIdentifier\"])+' '+\\\n",
     "                         str(row[\"flankingRegions.length\"])+' '+\\\n",
     "                         str(row[\"flankingRegions.direction\"])+' '+\\\n",
-    "                         str(row[\"flankingRegions.sequence.residues\"])+'\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from intermine.webservice import Service\n",
-    "service = Service(\"https://phytozome.jgi.doe.gov/phytomine/service\")\n",
-    "\n",
-    "query = service.new_query(\"Gene\")\n",
-    "\n",
-    "query.add_view(\n",
-    "    \"name\", \"primaryIdentifier\", \"secondaryIdentifier\", \"length\",\n",
-    "    \"flankingRegions.length\", \"flankingRegions.includeGene\",\n",
-    "    \"flankingRegions.direction\", \"flankingRegions.primaryIdentifier\",\n",
-    "    \"flankingRegions.sequence.length\", \"flankingRegions.sequence.residues\"\n",
-    ")\n",
-    "\n",
-    "query.add_constraint(\"flankingRegions.length\", \"=\", \"5000\", code = \"A\")\n",
-    "query.add_constraint(\"flankingRegions.includeGene\", \"=\", \"true\", code = \"B\")\n",
-    "query.add_constraint(\"flankingRegions.direction\", \"=\", \"upstream\", code = \"C\")\n",
-    "query.add_constraint(\"name\", \"=\", df['id'][0], code = \"D\")\n",
-    "\n",
-    "for row in query.rows():\n",
-    "    print(row[\"primaryIdentifier\"],\\\n",
-    "          row[\"flankingRegions.length\"],\\\n",
-    "          row[\"flankingRegions.direction\"],\\\n",
-    "          row[\"flankingRegions.sequence.residues\"])"
+    "                         str(row[\"flankingRegions.sequence.residues\"][3000:])+'\\n')"
    ]
   }
  ],
