Criando app de fatores de transcrição

--- a/Data science/Pré-processamento.ipynb
+++ b/Data science/Pré-processamento.ipynb
@@ -3,11 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/filipe/workspace/PhytoProm/venv/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine"
    ]
   },
   {
@@ -4718,6 +4730,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "489"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.A.size"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4726,7 +4758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -4844,7 +4876,7 @@
        "9  acttgtagtgttattttgttgaaggtaatgattataattgtgtgag...  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4860,7 +4892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4918,7 +4950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -4937,7 +4969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4946,7 +4978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -4972,7 +5004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5016,8 +5048,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -6359,7 +6393,7 @@
        "[489 rows x 10 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6374,7 +6408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -6508,6 +6542,17 @@
       "488                                                   []\n",
       "Name: ReverseComplement, Length: 489, dtype: object 489\n"
      ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'A' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-928f1f11471b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprocura2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mReverseComplement\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0msearchFT\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpromotor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPromotor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocura\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocura\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mprocura2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocura2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mZa\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mz0\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m9.\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'A' is not defined"
+     ]
     }
    ],
    "source": [
@@ -6515,89 +6560,8 @@
     "procura = df.Motifs.apply(lambda x: searchFT(promotor.Promotor[0], 5000, x))\n",
     "procura2 = df.ReverseComplement.apply(lambda x: searchFT(promotor.Promotor[0], 5000, x))\n",
     "print(procura, len(procura))\n",
-    "print (procura2, len(procura2))"
+    "print (procura2, len(procura2))[A-Za-z0-9.]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0               Dof\n",
-       "1               Dof\n",
-       "2               MYB\n",
-       "3               NaN\n",
-       "4               NaN\n",
-       "5               Dof\n",
-       "6               Myb\n",
-       "7               Dof\n",
-       "8               SBP\n",
-       "9              bZIP\n",
-       "10             bZIP\n",
-       "11             C2H2\n",
-       "12            ARR-B\n",
-       "13               B4\n",
-       "14              NaN\n",
-       "15             bZIP\n",
-       "16             bZIP\n",
-       "17              BZR\n",
-       "18             bZIP\n",
-       "19             bHLH\n",
-       "20              ERF\n",
-       "21         MADS-box\n",
-       "22         MADS-box\n",
-       "23         MADS-box\n",
-       "24              NaN\n",
-       "25        MADS-box \n",
-       "26        MADS-box \n",
-       "27             bHLH\n",
-       "28             bHLH\n",
-       "29             bHLH\n",
-       "           ...     \n",
-       "459            GATA\n",
-       "460     MYB_related\n",
-       "461     MYB_related\n",
-       "462     MYB_related\n",
-       "463     MYB_related\n",
-       "464     Myb-related\n",
-       "465             BPC\n",
-       "466             BPC\n",
-       "467             BPC\n",
-       "468        Homeobox\n",
-       "469             ERF\n",
-       "470             SBP\n",
-       "471        Homeobox\n",
-       "472       MADS-box \n",
-       "473             BZR\n",
-       "474             SBP\n",
-       "475            C2H2\n",
-       "476        Homeobox\n",
-       "477            bZIP\n",
-       "478     Myb-related\n",
-       "479             ARR\n",
-       "480            TCP \n",
-       "481           bHLH \n",
-       "482           bHLH \n",
-       "483     Myb-related\n",
-       "484             E2F\n",
-       "485            C2H2\n",
-       "486            WRKY\n",
-       "487           C2H2 \n",
-       "488            bZIP\n",
-       "Name: Family, Length: 489, dtype: object"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -6608,7 +6572,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.Matrix = df.Matrix.apply(lambda x: x.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.Matrix = df.Matrix.apply (lambda x: np.array(x, dtype=float))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6619,7 +6601,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
+    "df.to_sql('transcriptors_transcriptor', engine, index_label='ID', if_exists='append')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -7219,7 +7211,7 @@
        "[29723 rows x 4 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40058,7 +40050,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
