Criando form de análise

--- a/Data science/Pré-processamento.ipynb
+++ b/Data science/Pré-processamento.ipynb
@@ -1023,8 +1023,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
-    "family.to_sql('ecr_family', engine, index=False, index_label='id', if_exists='append')"
+    "#engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
+    "#family.to_sql('ecr_family', engine, index=False, index_label='id', if_exists='append')"
    ]
   },
   {
@@ -6562,7 +6562,7 @@
    "source": [
     "df.to_csv(path_or_buf='df.csv',\n",
     "          sep=',', header=True, index=False, mode='w',\n",
-    "         columns=['id', 'name', 'a', 'c', 'g', 't', 'matrix', 'motifs', 'reverseComplement'])"
+    "         columns=['id', 'name', 'family_id', 'a', 'c', 'g', 't', 'matrix', 'motifs', 'reverseComplement'])"
    ]
   },
   {
@@ -7426,8 +7426,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
-    "df.to_sql('ecr_transcriptor', engine, index=False, index_label='id', if_exists='append')"
+    "#engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
+    "#df.to_sql('ecr_transcriptor', engine, index=False, index_label='id', if_exists='append')"
    ]
   },
   {
@@ -8114,7 +8114,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "329"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rep = genome.locus.duplicated()\n",
+    "rep.where(lambda x: x==True).count()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8124,7 +8145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8202,7 +8223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -8594,7 +8615,7 @@
        "37  AAAACTTATATGTTATTTGCCGTGTTTGGATTTGAAAATAGACAAT...  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
