--- a/Data science/Pré-processamento.ipynb
+++ b/Data science/Pré-processamento.ipynb
@@ -8114,33 +8114,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "329"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rep = genome.locus.duplicated()\n",
-    "rep.where(lambda x: x==True).count()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
-    "genome.to_sql('ecr_promoter', engine, index=False, index_label='locus', if_exists='append')"
+    "#engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
+    "#genome.to_sql('ecr_promoter', engine, index=False, index_label='locus', if_exists='append')"
    ]
   },
   {
@@ -8212,9 +8191,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'searchLog' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-34-693e8e93fe7e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m searchLog.to_csv(path_or_buf='Genome Log.csv',\n\u001b[0m\u001b[1;32m      2\u001b[0m           \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'w'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m          columns=['gene', 'id', 'name', 'motifs', 'reverseComplement', '5l3l', '3l5l', 'mean', 'sum'])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'searchLog' is not defined"
+     ]
+    }
+   ],
    "source": [
     "searchLog.to_csv(path_or_buf='Genome Log.csv',\n",
     "          sep=',', header=True, index=False, mode='w',\n",
@@ -8223,7 +8214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -8615,7 +8606,7 @@
        "37  AAAACTTATATGTTATTTGCCGTGTTTGGATTTGAAAATAGACAAT...  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
