Meetup data science

--- a/Data science/Processamento.ipynb
+++ b/Data science/Processamento.ipynb
@@ -1749,8 +1749,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
-    "#genoma.to_sql('ecr_log', engine, index=True, index_label='id', if_exists='append')"
+    "engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
+    "genoma.to_sql('ecr_log', engine, index=True, index_label='id', if_exists='append')"
    ]
   },
   {
@@ -2679,8 +2679,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
-    "#df.to_sql('ecr_background', engine, index=False, index_label='id', if_exists='append')"
+    "engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
+    "df.to_sql('ecr_background', engine, index=False, index_label='id', if_exists='append')"
    ]
   },
   {
@@ -4788,7 +4788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4798,7 +4798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -5330,7 +5330,7 @@
        "[487 rows x 4 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5343,7 +5343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5353,7 +5353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -5570,7 +5570,7 @@
        "name[T.myb.Ph3]           11.857983  0.105985  111.883227  0.000080"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5581,7 +5581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -5613,62 +5613,190 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Name[T.AT3G10113]</th>\n",
-       "      <td>6.664307</td>\n",
-       "      <td>0.042325</td>\n",
-       "      <td>157.453743</td>\n",
-       "      <td>0.000040</td>\n",
+       "      <th>name[T.AHL25]</th>\n",
+       "      <td>5.786599</td>\n",
+       "      <td>0.050524</td>\n",
+       "      <td>114.531088</td>\n",
+       "      <td>0.000076</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Name[T.AT5G56840]</th>\n",
-       "      <td>5.989832</td>\n",
-       "      <td>0.057072</td>\n",
-       "      <td>104.952791</td>\n",
-       "      <td>0.000091</td>\n",
+       "      <th>name[T.AT3G10113]</th>\n",
+       "      <td>6.750125</td>\n",
+       "      <td>0.033102</td>\n",
+       "      <td>203.917798</td>\n",
+       "      <td>0.000024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Name[T.At2g38090]</th>\n",
-       "      <td>5.989832</td>\n",
-       "      <td>0.057072</td>\n",
-       "      <td>104.952791</td>\n",
-       "      <td>0.000091</td>\n",
+       "      <th>name[T.AT5G56840]</th>\n",
+       "      <td>8.188198</td>\n",
+       "      <td>0.041379</td>\n",
+       "      <td>197.881639</td>\n",
+       "      <td>0.000026</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Name[T.CMTA2]</th>\n",
-       "      <td>9.520789</td>\n",
-       "      <td>0.071711</td>\n",
-       "      <td>132.765330</td>\n",
-       "      <td>0.000057</td>\n",
+       "      <th>name[T.ATHB40]</th>\n",
+       "      <td>5.638394</td>\n",
+       "      <td>0.054287</td>\n",
+       "      <td>103.862978</td>\n",
+       "      <td>0.000093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Name[T.HAT2]</th>\n",
-       "      <td>6.664307</td>\n",
-       "      <td>0.042325</td>\n",
-       "      <td>157.453743</td>\n",
-       "      <td>0.000040</td>\n",
+       "      <th>name[T.At2g38090]</th>\n",
+       "      <td>8.188198</td>\n",
+       "      <td>0.041379</td>\n",
+       "      <td>197.881639</td>\n",
+       "      <td>0.000026</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Name[T.TCP14]</th>\n",
-       "      <td>5.961515</td>\n",
-       "      <td>0.057887</td>\n",
-       "      <td>102.986225</td>\n",
-       "      <td>0.000094</td>\n",
+       "      <th>name[T.BEE2]</th>\n",
+       "      <td>32.153188</td>\n",
+       "      <td>0.318160</td>\n",
+       "      <td>101.059698</td>\n",
+       "      <td>0.000098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.CBF2]</th>\n",
+       "      <td>6.521082</td>\n",
+       "      <td>0.057371</td>\n",
+       "      <td>113.665510</td>\n",
+       "      <td>0.000077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.CMTA2]</th>\n",
+       "      <td>9.743975</td>\n",
+       "      <td>0.051589</td>\n",
+       "      <td>188.875446</td>\n",
+       "      <td>0.000028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.HAT2]</th>\n",
+       "      <td>6.750125</td>\n",
+       "      <td>0.033102</td>\n",
+       "      <td>203.917798</td>\n",
+       "      <td>0.000024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.MGP]</th>\n",
+       "      <td>10.593815</td>\n",
+       "      <td>0.055449</td>\n",
+       "      <td>191.055994</td>\n",
+       "      <td>0.000027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.MYB4]</th>\n",
+       "      <td>10.170425</td>\n",
+       "      <td>0.096462</td>\n",
+       "      <td>105.434813</td>\n",
+       "      <td>0.000090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.MYB59]</th>\n",
+       "      <td>5.984857</td>\n",
+       "      <td>0.045784</td>\n",
+       "      <td>130.720697</td>\n",
+       "      <td>0.000059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.NAC043]</th>\n",
+       "      <td>9.344722</td>\n",
+       "      <td>0.062150</td>\n",
+       "      <td>150.358046</td>\n",
+       "      <td>0.000044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.NTL9]</th>\n",
+       "      <td>5.984857</td>\n",
+       "      <td>0.045784</td>\n",
+       "      <td>130.720697</td>\n",
+       "      <td>0.000059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.PHYPADRAFT_48267]</th>\n",
+       "      <td>17.293035</td>\n",
+       "      <td>0.154680</td>\n",
+       "      <td>111.798625</td>\n",
+       "      <td>0.000080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.RAP2-6]</th>\n",
+       "      <td>6.018877</td>\n",
+       "      <td>0.045011</td>\n",
+       "      <td>133.721376</td>\n",
+       "      <td>0.000056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.SPL14]</th>\n",
+       "      <td>3.853751</td>\n",
+       "      <td>0.032455</td>\n",
+       "      <td>118.740833</td>\n",
+       "      <td>0.000071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.TCP14]</th>\n",
+       "      <td>6.172556</td>\n",
+       "      <td>0.041698</td>\n",
+       "      <td>148.029316</td>\n",
+       "      <td>0.000046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.TCP4]</th>\n",
+       "      <td>4.891007</td>\n",
+       "      <td>0.047981</td>\n",
+       "      <td>101.937257</td>\n",
+       "      <td>0.000096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.TINY]</th>\n",
+       "      <td>6.521082</td>\n",
+       "      <td>0.057371</td>\n",
+       "      <td>113.665510</td>\n",
+       "      <td>0.000077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.bZIP910]</th>\n",
+       "      <td>3.761856</td>\n",
+       "      <td>0.033013</td>\n",
+       "      <td>113.951768</td>\n",
+       "      <td>0.000077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name[T.myb.Ph3]</th>\n",
+       "      <td>11.857983</td>\n",
+       "      <td>0.105985</td>\n",
+       "      <td>111.883227</td>\n",
+       "      <td>0.000080</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       coef        SE           t   p-value\n",
-       "Name[T.AT3G10113]  6.664307  0.042325  157.453743  0.000040\n",
-       "Name[T.AT5G56840]  5.989832  0.057072  104.952791  0.000091\n",
-       "Name[T.At2g38090]  5.989832  0.057072  104.952791  0.000091\n",
-       "Name[T.CMTA2]      9.520789  0.071711  132.765330  0.000057\n",
-       "Name[T.HAT2]       6.664307  0.042325  157.453743  0.000040\n",
-       "Name[T.TCP14]      5.961515  0.057887  102.986225  0.000094"
+       "                               coef        SE           t   p-value\n",
+       "name[T.AHL25]              5.786599  0.050524  114.531088  0.000076\n",
+       "name[T.AT3G10113]          6.750125  0.033102  203.917798  0.000024\n",
+       "name[T.AT5G56840]          8.188198  0.041379  197.881639  0.000026\n",
+       "name[T.ATHB40]             5.638394  0.054287  103.862978  0.000093\n",
+       "name[T.At2g38090]          8.188198  0.041379  197.881639  0.000026\n",
+       "name[T.BEE2]              32.153188  0.318160  101.059698  0.000098\n",
+       "name[T.CBF2]               6.521082  0.057371  113.665510  0.000077\n",
+       "name[T.CMTA2]              9.743975  0.051589  188.875446  0.000028\n",
+       "name[T.HAT2]               6.750125  0.033102  203.917798  0.000024\n",
+       "name[T.MGP]               10.593815  0.055449  191.055994  0.000027\n",
+       "name[T.MYB4]              10.170425  0.096462  105.434813  0.000090\n",
+       "name[T.MYB59]              5.984857  0.045784  130.720697  0.000059\n",
+       "name[T.NAC043]             9.344722  0.062150  150.358046  0.000044\n",
+       "name[T.NTL9]               5.984857  0.045784  130.720697  0.000059\n",
+       "name[T.PHYPADRAFT_48267]  17.293035  0.154680  111.798625  0.000080\n",
+       "name[T.RAP2-6]             6.018877  0.045011  133.721376  0.000056\n",
+       "name[T.SPL14]              3.853751  0.032455  118.740833  0.000071\n",
+       "name[T.TCP14]              6.172556  0.041698  148.029316  0.000046\n",
+       "name[T.TCP4]               4.891007  0.047981  101.937257  0.000096\n",
+       "name[T.TINY]               6.521082  0.057371  113.665510  0.000077\n",
+       "name[T.bZIP910]            3.761856  0.033013  113.951768  0.000077\n",
+       "name[T.myb.Ph3]           11.857983  0.105985  111.883227  0.000080"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5679,7 +5807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -5689,7 +5817,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-c1dec3aa6eca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Genome'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Cluster'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'blue'\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Cluster'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-15-c1dec3aa6eca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Genome'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Cluster'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'blue'\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Cluster'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
      ]
     }
