--- a/Data science/Pré-processamento.ipynb
+++ b/Data science/Pré-processamento.ipynb
@@ -1023,8 +1023,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
-    "#family.to_sql('ecr_family', engine, index=False, index_label='id', if_exists='append')"
+    "engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
+    "family.to_sql('ecr_family', engine, index=False, index_label='id', if_exists='append')"
    ]
   },
   {
@@ -7426,8 +7426,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
-    "#df.to_sql('ecr_transcriptor', engine, index=False, index_label='id', if_exists='append')"
+    "engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
+    "df.to_sql('ecr_transcriptor', engine, index=False, index_label='id', if_exists='append')"
    ]
   },
   {
@@ -8118,13 +8118,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
-    "#genome.to_sql('ecr_promoter', engine, index=False, index_label='locus', if_exists='append')"
+    "engine = create_engine('postgresql://phytoprom:ph1t0pr0m@localhost:5432/PhytoProm')\n",
+    "genome.to_sql('ecr_promoter', engine, index=False, index_label='locus', if_exists='append')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
