Glycine max mining

--- a/Data science/Processamento.ipynb
+++ b/Data science/Processamento.ipynb
@@ -4710,7 +4710,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['p-value'] = 0\n",
+    "aNdf['p-value'] = 0\n",
     "df['p-value'] = df.apply(lambda x: stats.fisher_exact([[x['vigna_genome'], x['Cluster']], [vigna_genome, cluster]])[1], axis=1)"
    ]
   },
