Processing Glycine max and adding Vitis vinifera promoters

--- a/Data science/Processamento.ipynb
+++ b/Data science/Processamento.ipynb
@@ -2563,7 +2563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df.to_sql('ecr_background', engine, index=False, index_label='id', if_exists='append')"
+    "df.to_sql('ecr_background', engine, index=False, index_label='id', if_exists='append')"
    ]
   },
   {
